FoodBank/objects/GroupService__c.object
<CustomObject>
    <description>A meal service provided to a group of people. At present this is only a group meal.</description>
    <fields>
        <fullName>AdultsServed__c</fullName>
        <description>How many adults (&gt; 17) were served?</description>
        <label>Adults Served</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildrenServed__c</fullName>
        <description>How many children (&lt; age 18) were served?</description>
        <label>Children Served</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DateOfService__c</fullName>
        <description>When was this group service provided?</description>
        <label>Date Received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>The group to which this service was provided</description>
        <label>Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Group Services</relationshipLabel>
        <relationshipName>GroupServices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seconds__c</fullName>
        <label>Seconds</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToGoPlates__c</fullName>
        <description>How many to go plates were served?</description>
        <label>To Go Plates</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMeals__c</fullName>
        <description>The combined total number of meals served to this group</description>
        <formula>AdultsServed__c + ChildrenServed__c + ToGoPlates__c + Seconds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Meals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Group Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DateOfService__c</columns>
        <columns>AdultsServed__c</columns>
        <columns>ChildrenServed__c</columns>
        <columns>ToGoPlates__c</columns>
        <columns>TotalMeals__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>